--- a/FormsOfLocomotion/FormsOfLocomotion.csproj
+++ b/FormsOfLocomotion/FormsOfLocomotion.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{77F44FCF-17A6-4C78-A8BC-C10EFE4E52CF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Traffic</RootNamespace>
-    <AssemblyName>Traffic</AssemblyName>
+    <ProjectGuid>{02CA4B27-BBC5-408E-8070-9F6E3DE09F97}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>FormsOfLocomotion</RootNamespace>
+    <AssemblyName>FormsOfLocomotion</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,14 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="Compact.cs" />
+    <Compile Include="FreightTrain.cs" />
+    <Compile Include="IHeavyLoadCarrier.cs" />
+    <Compile Include="IPassengerCarrier.cs" />
+    <Compile Include="PassengerTrain.cs" />
+    <Compile Include="Pickup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <Compile Include="SUV.cs" />
+    <Compile Include="Train.cs" />
+    <Compile Include="Vehicle.cs" />
+    <Compile Include="_424DOubleBogey.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
