--- a/Traffic/Traffic.csproj
+++ b/Traffic/Traffic.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FormsOfLocomotion">
+      <HintPath>..\FormsOfLocomotion\obj\Debug\FormsOfLocomotion.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
